################################################################################
##
##  YOUR QUILL
##
################################################################################

include(yq_core.cmake)


# add_subdirectory(core)

add_subdirectory(random)

#add_subdirectory(chemistry)
#add_subdirectory(color)
#add_subdirectory(date)
#add_subdirectory(graph)
#add_subdirectory(pixel)
#add_subdirectory(sql)
#add_subdirectory(userexpr)

