################################################################################
##
##  YOUR QUILL
##
################################################################################

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY  ${CMAKE_BINARY_DIR}/bin/plugin/lua)

add_subdirectory(corelua)
add_subdirectory(mathlua)
