################################################################################
##
##  YOUR QUILL
##
################################################################################

macro(test name)
    add_executable(test_${name} ${name}.cpp)
    target_link_libraries(test_${name} PRIVATE yq_core yq_math BoostUT)
    add_test(NAME ${name} COMMAND test_${name} ${ARGN})
endmacro()

test(axbox1)
test(axbox2)
test(axbox3)
test(axbox4)
test(circle2)
test(coord1)
test(coord2)
test(coord3)
test(coord4)
test(coord5)
test(coord6)
test(ecefposition)
test(fraction)
test(mksvectors)
test(polygon2)
test(polygon3)
test(polygon4)
test(polyline2)
test(polyline3)
test(polyline4)
test(quaternion3)
test(segment1)
test(segment2)
test(segment3)
test(segment4)
test(size1)
test(size2)
test(size3)
test(size4)
test(sphere3)
test(sphere4)
test(spinor2)
test(statistics)
test(tensor11)
test(tensor12)
test(tensor13)
test(tensor14)
test(tensor21)
test(tensor22)
test(tensor23)
test(tensor24)
test(tensor31)
test(tensor32)
test(tensor33)
test(tensor34)
test(tensor41)
test(tensor42)
test(tensor43)
test(tensor44)
test(triangle2)
test(triangle3)
test(triangle4)
test(units)
test(vector1)
test(vector2)
test(vector3)
test(vector4)
test(wgs84)
